admin panel finished

--- a/.env
+++ b/.env
@@ -1,9 +1,9 @@
-APP_NAME=Laravel
+APP_NAME='HeartFund'
 APP_ENV=local
 APP_KEY=base64:CGsQ1cbYzpO/BMt4XyEZt43slhxhgE8Ekh5VM0Tyxlw=
 APP_DEBUG=true
 APP_TIMEZONE=UTC
-APP_URL=http://localhost
+APP_URL=http://127.0.0.1/
 
 APP_LOCALE=en
 APP_FALLBACK_LOCALE=en
